k8s/microservices/campaign/campaign-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tg-campaign-db
  namespace: campaign
spec:
  selector:
    matchLabels:
      app: tg-campaign-db
  # serviceName: tg-campaign-db-svc
  replicas: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: tg-campaign-db
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mysql
          image: mysql:8.0.33
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
              - name: mysql-persistent-storage
                mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-persistent-storage
        namespace: campaign
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "nfs-client"
        resources:
          requests:
            storage: 5Gi

---

apiVersion: v1
kind: Service
metadata:
  name: tg-campaign-db-svc
  namespace: campaign
spec:
  selector:
    app: tg-campaign-db
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
